--- a/index.htm
+++ b/index.htm
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+     <div class="nav"><img src="./assets/Screenshot 2024-02-06 113643.png" alt=""></div>
     <div class="main">
-    
+       
         <div class="container"></div>
         <div class="main2">
             <img id="imgs" src="./assets/img.jpg" alt="">
